Another attempt at fixing the image stretching on mobile.

--- a/style.css
+++ b/style.css
@@ -346,8 +346,7 @@ footer p {
 
 .contributor img {
   width: 100%;
-  height: auto;
-  aspect-ratio: 1 / 1;
+  object-fit: contain;
 }
 
 .name {
